[gd_scene load_steps=2 format=3 uid="uid://hud_scene_01"]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="TopBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="ScoreLabel" type="Label" parent="TopBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -15.0
offset_right = 200.0
offset_bottom = 15.0
grow_vertical = 2
text = "Score: 0"
vertical_alignment = 1

[node name="CoinsLabel" type="Label" parent="TopBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -15.0
offset_right = -20.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
text = "Coins: 0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HPContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -16.0
offset_right = 80.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="ComboLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "COMBO x10"
horizontal_alignment = 1
vertical_alignment = 1
